Fixed title and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 /* Main button styles */
 .mainButton {
     display: block;
-    margin: 10px auto;
+    margin: 10px auto; 
     padding: 10px 15px;
     font-size: 16px;
     width: 180px;
@@ -212,4 +212,10 @@
 
 .message.error {
     color: red;
+}
+.welcomeHeading {
+    text-align:center;
+    font-size: 2em; /* Adjust the size as needed */
+    margin-top: -280px;
+    margin-bottom: 120px;
 }
